# encodex

./: Cargo.toml  README.md
src/: args.rs  base_encoding.rs  input.rs  lib.rs  main.rs  settings.rs
