[package]
# General package information
name = "encodex"
version = "0.0.1"
description = "Encoder and Decoder for Base64 encoding as defined in RFC 4648."
edition = "2021"

# Package information relevant for publishing the crate to crates.io
publish = ["crates-io"]
authors = ["Fabian Moos <fabian.moos@moosegamesdev.org>"]
homepage = "https://www.moosegamesdev.org"
license = "LGPL-3.0-only"
readme = "README.md"

# Build related information
build = false
repository = "httpy://github.com/MooseGames/encodex.git"

[features]
dox = []

